Update lib/src/main/java/io/github/taz03/jia/requests/friendships/FriendshipsActionRequest.java
Co-authored-by: Tanish <tanishazad03@gmail.com>